--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -15,8 +15,8 @@ html {
 body {
   font-family: v.$font-family-base;
   line-height: 1.6;
-  color: v.$color-text;
-  background-color: v.$color-bg;
+  color: var(--text-primary);
+  background-color: var(--bg-primary);
   position: relative;
 }
 
@@ -25,8 +25,8 @@ body {
   position: absolute;
   top: -40px;
   left: 6px;
-  background: v.$color-primary;
-  color: v.$white;
+  background: var(--bg-primary);
+  color: var(--text-primary);
   padding: 8px;
   text-decoration: none;
   border-radius: v.$border-radius;
