--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,10 @@
 // 1. ABSTRACTOS
 @use 'abstracts/variables';
 
-// 2. TEMAS (Importa directamente los archivos necesarios)
+// 2.1  Temas de Accesibilidad
+@use 'themes/accessibility/themes-index' as accessibility-themes;
+
+// 2.2 Partículas
 @use 'themes/particles/base-particles';
 @use 'themes/particles/light-particles';
 @use 'themes/particles/dark-particles';
@@ -19,10 +22,13 @@
 // 4. LAYOUT
 @use 'layout/grid';
 
-// 5. COMPONENTES
-@use 'components/navigation';
+// 5. COMPONENTES (usan variables CSS de los temas)
+@use 'components/navbar';
 @use 'components/buttons';
 @use 'components/particles';
+@use 'components/footer';
+@use 'components/hero';
+@use 'components/intro';
 
 // 6. PÁGINAS
 @use 'pages/home';
