--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@
 @use 'components/footer';
 @use 'components/hero';
 @use 'components/intro';
+@use 'components/dropdowns';
 
 // 6. PÁGINAS
 @use 'pages/home';
