--- a/src/scss/themes/accessibility/_themes-index.scss
+++ b/src/scss/themes/accessibility/_themes-index.scss
@@ -5,4 +5,4 @@
 @forward 'high-contrast-theme';
 @forward 'grayscale-theme';
 @forward 'sepia-theme';
-@forward 'reduced-motion-theme';
+@forward 'accessibility-modes';
